apps/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: transmission
spec:
  type: ClusterIP
  selector:
    app: transmission
  ports:
    - name: web
      port: 9091
      targetPort: 9091
